--- a/nftcalendar/src/styles/calendar.scss
+++ b/nftcalendar/src/styles/calendar.scss
@@ -223,7 +223,7 @@ main {
     line-height: 1;
     color: var(--main-color);
     opacity: 0;
-    font-size: 8em;
+    font-size: 6em;
     position: absolute;
     top: -0.2em;
     right: -0.05em;
@@ -270,10 +270,10 @@ main {
     position: relative;
     padding: 20px;
     margin: 10px;
-    border: solid 1px #ddd;
-    border-radius: 15px;
-    -moz-border-radius: 15px;
-    -webkit-border-radius: 15px;
+    // border: solid 1px #ddd;
+    // border-radius: 15px;
+    // -moz-border-radius: 15px;
+    // -webkit-border-radius: 15px;
     margin-bottom: 25px;
     background: #ffffff;
     transition: .7s;
@@ -285,7 +285,7 @@ main {
 .nft__item_info{
   cursor: pointer;
   line-height: 28px;
-  margin-bottom: -22px;
+  //margin-bottom: -22px;
 }
 .nft__item h4 {
     font-weight: 800;
